# caprinovacao-tcc

./: .dockerignore  ACASALAMENTO_INSTALL.md  ACASALAMENTO_README.md  ACASALAMENTO_SUMMARY.md  PERFORMANCE_SUMMARY.md  README.md  docker-compose.yml
api/: .env.example  .gitignore  ACASALAMENTO_BACKEND.md  AUTH_EXAMPLES.md  CADASTRO_EM_MASSA.md  Dockerfile  GUIA_INICIO_RAPIDO.md  LICENSE  MANEJO_REPRODUTIVO.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  README.md  animais_teste.json  cadastrar_animais.py  cadastrar_individual.py  cadastrar_tudo.py  create_mating_tables.py  env.example  pegar_ids.py  pravaler.db-shm  pravaler.db-wal  pyproject.toml  requirements.txt  setup.py  start.py  test_mating_module.py
api/app/: main.py
api/app/core/: auth.py  config.py  db.py  optimizations.py  security.py
api/app/crud/: base.py
api/app/models/: __init__.py  animal.py  animal_control.py  animal_measurements.py  auth.py  base.py  batch.py  employee.py  events.py  farm.py  illness.py  mating.py  medicine.py  property.py  reproductive_management.py  taxonomy.py  user.py
api/app/routers/: animal_control.py  animals.py  auth.py  batches.py  breeds.py  employees.py  events.py  farms.py  herds.py  illnesses.py  mating.py  medicines.py  properties.py  races.py  reproductive_management.py  users.py
api/dados_teste/: README.md  doencas.json  fazendas.json  medicamentos.json  racas.json  rebanhos.json
frontend/: ACASALAMENTO_GUIDE.md  ANIMAIS_FORMULARIO_RESTAURADO.md  ANIMAIS_MELHORIAS.md  ANIMALS_GUIDE.md  BACKEND_STATUS.md  CHANGELOG_HERDS.md  CHANGELOG_INTEGRATION.md  (+12 more)
(+82 files in other folders)
